--- a/fancaps_direct_url_downloader_COLAB.ipynb
+++ b/fancaps_direct_url_downloader_COLAB.ipynb
@@ -23,6 +23,8 @@
       "outputs": [],
       "source": [
         "# Fancaps Direct URL Downloader\n",
+        "# By citronlegacy:\n",
+        "# https://github.com/citronlegacy/fancaps-direct-url-downloader\n",
         "#\n",
         "# This script downloads a list of direct image URLs from Fancaps.\n",
         "# Inspired by KitsunekoFi's fancaps-dl (https://github.com/KitsunekoFi/fancaps-dl),\n",
