Added sleep time and also a zip folder cell

--- a/fancaps_direct_url_downloader_COLAB.ipynb
+++ b/fancaps_direct_url_downloader_COLAB.ipynb
@@ -36,6 +36,7 @@
         "#   - Run the script.\n",
         "\n",
         "import os\n",
+        "import time\n",
         "import concurrent.futures\n",
         "import urllib.request\n",
         "\n",
@@ -52,9 +53,13 @@
         "https://cdni.fancaps.net/file/fancaps-movieimages/4839650.jpg\n",
         "\"\"\"\n",
         "\n",
+        "\n",
         "# Output folder for downloaded images\n",
-        "OUTPUT_FOLDER = \"./downloads/test3\"\n",
+        "OUTPUT_FOLDER = \"./downloads\"\n",
         "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
+        "\n",
+        "# Pause configuration\n",
+        "PAUSE_EVERY_N = 3  # Number of downloads after which to pause for 1 second - You can probably download more than 3 at once but 3 is safe. Don't overload Fancaps.\n",
         "\n",
         "# -------------------------\n",
         "# Parse URLs\n",
@@ -91,14 +96,34 @@
         "        print(f\"❌ Error downloading {url}: {e}\")\n",
         "\n",
         "# -------------------------\n",
-        "# Run downloads in parallel\n",
+        "# Run downloads with optional pauses\n",
         "# -------------------------\n",
         "\n",
-        "with concurrent.futures.ThreadPoolExecutor(max_workers=4) as executor:\n",
-        "    executor.map(download_file, image_urls)\n",
+        "def download_all_with_pauses(urls):\n",
+        "    with concurrent.futures.ThreadPoolExecutor(max_workers=4) as executor:\n",
+        "        futures = []\n",
+        "        for i, url in enumerate(urls):\n",
+        "            futures.append(executor.submit(download_file, url))\n",
+        "            if (i + 1) % PAUSE_EVERY_N == 0:\n",
+        "                print(f\"\\nℹ️  Pausing for 1 second every {PAUSE_EVERY_N} downloads...\\n\")\n",
+        "                time.sleep(1)  # Pause for 1 second after every PAUSE_EVERY_N downloads\n",
+        "        concurrent.futures.wait(futures)\n",
         "\n",
-        "print(\"🎉 Done downloading all images.\")"
+        "download_all_with_pauses(image_urls)\n",
+        "\n",
+        "print(\"🎉 Done downloading all images.\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r downloads.zip downloads"
+      ],
+      "metadata": {
+        "id": "_J5ryGAx_0Ei"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
