--- a/fancaps_direct_url_downloader_COLAB.ipynb
+++ b/fancaps_direct_url_downloader_COLAB.ipynb
@@ -25,26 +25,12 @@
         "# Fancaps Direct URL Downloader\n",
         "# By citronlegacy:\n",
         "# https://github.com/citronlegacy/fancaps-direct-url-downloader\n",
-        "#\n",
-        "# This script downloads a list of direct image URLs from Fancaps.\n",
-        "# Inspired by KitsunekoFi's fancaps-dl (https://github.com/KitsunekoFi/fancaps-dl),\n",
-        "# which is a more elaborate downloader supporting episodes and movie URLs.\n",
-        "#\n",
-        "# Usage:\n",
-        "#   - Paste your image URLs in the 'urls_text' multiline string.\n",
-        "#   - Set your preferred output folder.\n",
-        "#   - Run the script.\n",
         "\n",
         "import os\n",
         "import time\n",
         "import concurrent.futures\n",
         "import urllib.request\n",
-        "\n",
-        "# -------------------------\n",
-        "# User Configuration\n",
-        "# -------------------------\n",
-        "\n",
-        "USER_AGENT = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36\"\n",
+        "import zipfile\n",
         "\n",
         "# Paste your URLs here (one URL per line)\n",
         "urls_text = \"\"\"\n",
@@ -53,13 +39,22 @@
         "https://cdni.fancaps.net/file/fancaps-movieimages/4839650.jpg\n",
         "\"\"\"\n",
         "\n",
+        "# -------------------------\n",
+        "# User Configuration\n",
+        "# -------------------------\n",
         "\n",
-        "# Output folder for downloaded images\n",
-        "OUTPUT_FOLDER = \"./downloads\"\n",
+        "# Define download directory and zip option\n",
+        "download_directory = \"test\"  # @param {type:\"string\"}\n",
+        "zip_folder = True  # @param {type:\"boolean\"}\n",
+        "\n",
+        "USER_AGENT = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36\"\n",
+        "\n",
+        "# Output folder\n",
+        "OUTPUT_FOLDER = download_directory\n",
         "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
         "\n",
         "# Pause configuration\n",
-        "PAUSE_EVERY_N = 3  # Number of downloads after which to pause for 1 second - You can probably download more than 3 at once but 3 is safe. Don't overload Fancaps.\n",
+        "PAUSE_EVERY_N = 3\n",
         "\n",
         "# -------------------------\n",
         "# Parse URLs\n",
@@ -74,10 +69,6 @@
         "headers = {\n",
         "    'User-Agent': USER_AGENT\n",
         "}\n",
-        "\n",
-        "# If needed, add cf_clearance cookie to headers like this:\n",
-        "# cf_clearance = \"your_cf_clearance_cookie_here\"\n",
-        "# headers['Cookie'] = f'cf_clearance={cf_clearance}'\n",
         "\n",
         "# -------------------------\n",
         "# Download function\n",
@@ -96,7 +87,7 @@
         "        print(f\"❌ Error downloading {url}: {e}\")\n",
         "\n",
         "# -------------------------\n",
-        "# Run downloads with optional pauses\n",
+        "# Run downloads with pauses\n",
         "# -------------------------\n",
         "\n",
         "def download_all_with_pauses(urls):\n",
@@ -106,24 +97,35 @@
         "            futures.append(executor.submit(download_file, url))\n",
         "            if (i + 1) % PAUSE_EVERY_N == 0:\n",
         "                print(f\"\\nℹ️  Pausing for 1 second every {PAUSE_EVERY_N} downloads...\\n\")\n",
-        "                time.sleep(1)  # Pause for 1 second after every PAUSE_EVERY_N downloads\n",
+        "                time.sleep(1)\n",
         "        concurrent.futures.wait(futures)\n",
+        "\n",
+        "# -------------------------\n",
+        "# Zip the folder if enabled\n",
+        "# -------------------------\n",
+        "\n",
+        "def zip_downloads(folder_path):\n",
+        "    zip_filename = f\"{folder_path}.zip\"\n",
+        "    print(f\"\\n📦 Zipping folder to: {zip_filename}\")\n",
+        "    with zipfile.ZipFile(zip_filename, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
+        "        for root, _, files in os.walk(folder_path):\n",
+        "            for file in files:\n",
+        "                file_path = os.path.join(root, file)\n",
+        "                arcname = os.path.relpath(file_path, start=folder_path)\n",
+        "                zipf.write(file_path, arcname)\n",
+        "    print(\"✅ Zipping complete.\")\n",
+        "\n",
+        "# -------------------------\n",
+        "# Run everything\n",
+        "# -------------------------\n",
         "\n",
         "download_all_with_pauses(image_urls)\n",
         "\n",
+        "if zip_folder:\n",
+        "    zip_downloads(OUTPUT_FOLDER)\n",
+        "\n",
         "print(\"🎉 Done downloading all images.\")\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!zip -r downloads.zip downloads"
-      ],
-      "metadata": {
-        "id": "_J5ryGAx_0Ei"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
