added downloader v2 to downloads urls from a file

--- a/fancaps_direct_url_downloader_COLAB.ipynb
+++ b/fancaps_direct_url_downloader_COLAB.ipynb
@@ -15,16 +15,153 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Fancaps Direct URL Downloader\n",
+        "Created by CitronLegacy:\n",
+        "https://github.com/citronlegacy/fancaps-direct-url-downloader\n",
+        "\n",
+        "---\n",
+        "This script downloads a list of direct image URLs from Fancaps.\n",
+        "Inspired by KitsunekoFi's fancaps-dl (https://github.com/KitsunekoFi/fancaps-dl), which is a more elaborate downloader supporting episodes and movie URLs.\n",
+        "\n",
+        "Usage:\n",
+        "  - Set your preferred output folder.\n",
+        "  - Select zip_folder if you to automatically zip the downloads after download"
+      ],
+      "metadata": {
+        "id": "Tv8k8PiEa7IJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Downloader v2\n",
+        "\n",
+        "#@markdown This version of the downloader will download all the urls in the url_file uploaded in colab at url_file_location\n",
+        "\n",
+        "import os\n",
+        "import time\n",
+        "import concurrent.futures\n",
+        "import urllib.request\n",
+        "import zipfile\n",
+        "\n",
+        "url_file_location = \"example.txt\"  # @param {type:\"string\"}\n",
+        "\n",
+        "\n",
+        "# -------------------------\n",
+        "# User Configuration\n",
+        "# -------------------------\n",
+        "\n",
+        "# Define download directory and zip option\n",
+        "download_directory = \"example_downloads_folder\"  # @param {type:\"string\"}\n",
+        "zip_folder = True  # @param {type:\"boolean\"}\n",
+        "\n",
+        "USER_AGENT = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36\"\n",
+        "\n",
+        "# Output folder\n",
+        "OUTPUT_FOLDER = download_directory\n",
+        "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
+        "\n",
+        "# Pause configuration\n",
+        "PAUSE_EVERY_N = 3  # Number of downloads after which to pause for 1 second - You can probably download more than 3 at once but 3 is safe. Don't overload Fancaps.\n",
+        "\n",
+        "# -------------------------\n",
+        "# Parse URLs\n",
+        "# -------------------------\n",
+        "\n",
+        "if not os.path.isfile(url_file_location):\n",
+        "    raise FileNotFoundError(f\"❌ URL file not found: {url_file_location}\")\n",
+        "\n",
+        "with open(url_file_location, \"r\", encoding=\"utf-8\") as f:\n",
+        "    urls_text = f.read()\n",
+        "\n",
+        "image_urls = [line.strip() for line in urls_text.strip().split('\\n') if line.strip()]\n",
+        "\n",
+        "# -------------------------\n",
+        "# HTTP headers\n",
+        "# -------------------------\n",
+        "\n",
+        "headers = {\n",
+        "    'User-Agent': USER_AGENT\n",
+        "}\n",
+        "\n",
+        "# -------------------------\n",
+        "# Download function\n",
+        "# -------------------------\n",
+        "\n",
+        "def download_file(url):\n",
+        "    filename = os.path.basename(url)\n",
+        "    filepath = os.path.join(OUTPUT_FOLDER, filename)\n",
+        "    print(f\"Downloading: {url} -> {filepath}\")\n",
+        "    try:\n",
+        "        req = urllib.request.Request(url, headers=headers)\n",
+        "        with urllib.request.urlopen(req) as resp, open(filepath, 'wb') as out_file:\n",
+        "            out_file.write(resp.read())\n",
+        "        print(f\"✅ Saved: {filename}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error downloading {url}: {e}\")\n",
+        "\n",
+        "# -------------------------\n",
+        "# Run downloads with pauses\n",
+        "# -------------------------\n",
+        "\n",
+        "def download_all_with_pauses(urls):\n",
+        "    with concurrent.futures.ThreadPoolExecutor(max_workers=4) as executor:\n",
+        "        futures = []\n",
+        "        for i, url in enumerate(urls):\n",
+        "            futures.append(executor.submit(download_file, url))\n",
+        "            if (i + 1) % PAUSE_EVERY_N == 0:\n",
+        "                print(f\"\\nℹ️  Pausing for 1 second every {PAUSE_EVERY_N} downloads...\\n\")\n",
+        "                time.sleep(1)\n",
+        "        concurrent.futures.wait(futures)\n",
+        "\n",
+        "# -------------------------\n",
+        "# Zip the folder if enabled\n",
+        "# -------------------------\n",
+        "\n",
+        "def zip_downloads(folder_path):\n",
+        "    zip_filename = f\"{folder_path}.zip\"\n",
+        "    print(f\"\\n📦 Zipping folder to: {zip_filename}\")\n",
+        "    with zipfile.ZipFile(zip_filename, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
+        "        for root, _, files in os.walk(folder_path):\n",
+        "            for file in files:\n",
+        "                file_path = os.path.join(root, file)\n",
+        "                arcname = os.path.relpath(file_path, start=folder_path)\n",
+        "                zipf.write(file_path, arcname)\n",
+        "    print(\"✅ Zipping complete.\")\n",
+        "\n",
+        "# -------------------------\n",
+        "# Run everything\n",
+        "# -------------------------\n",
+        "\n",
+        "download_all_with_pauses(image_urls)\n",
+        "\n",
+        "if zip_folder:\n",
+        "    print(\"\\n📦 Zipping downloaded images...\")\n",
+        "    zip_downloads(OUTPUT_FOLDER)\n",
+        "\n",
+        "print(\"🎉 Done downloading all images.\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "TDjrWDAFck6G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jJiOT_ZB2vIv"
+        "id": "jJiOT_ZB2vIv",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "# Fancaps Direct URL Downloader\n",
-        "# By citronlegacy:\n",
-        "# https://github.com/citronlegacy/fancaps-direct-url-downloader\n",
+        "#@title Downloader v1\n",
+        "\n",
+        "#@markdown This version of the downloader will download all the urls in the 'urls_text' multiline string defined in the code.\n",
         "\n",
         "import os\n",
         "import time\n",
@@ -44,7 +181,7 @@
         "# -------------------------\n",
         "\n",
         "# Define download directory and zip option\n",
-        "download_directory = \"test\"  # @param {type:\"string\"}\n",
+        "download_directory = \"example_downloads_folder\"  # @param {type:\"string\"}\n",
         "zip_folder = True  # @param {type:\"boolean\"}\n",
         "\n",
         "USER_AGENT = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36\"\n",
@@ -54,7 +191,7 @@
         "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
         "\n",
         "# Pause configuration\n",
-        "PAUSE_EVERY_N = 3\n",
+        "PAUSE_EVERY_N = 3  # Number of downloads after which to pause for 1 second - You can probably download more than 3 at once but 3 is safe. Don't overload Fancaps.\n",
         "\n",
         "# -------------------------\n",
         "# Parse URLs\n",
@@ -122,6 +259,7 @@
         "download_all_with_pauses(image_urls)\n",
         "\n",
         "if zip_folder:\n",
+        "    print(\"\\n📦 Zipping downloaded images...\")\n",
         "    zip_downloads(OUTPUT_FOLDER)\n",
         "\n",
         "print(\"🎉 Done downloading all images.\")\n"
